[gd_scene load_steps=15 format=4 uid="uid://dfddsmhm3n04y"]

[ext_resource type="Script" uid="uid://dn53tlskbhru8" path="res://scenes/title.gd" id="1_yql1r"]
[ext_resource type="PackedScene" uid="uid://bnfahk087865n" path="res://scenes/ui/background.tscn" id="2_ia1n6"]
[ext_resource type="TileSet" uid="uid://c52765ejv3ad7" path="res://assets/tilemap.tres" id="3_hiwto"]
[ext_resource type="PackedScene" uid="uid://hmqq4pbyb36n" path="res://scenes/ui/camera.tscn" id="4_w65of"]
[ext_resource type="PackedScene" uid="uid://bgovpw80eie8h" path="res://scenes/entities/player.tscn" id="5_ygloa"]
[ext_resource type="PackedScene" uid="uid://c2mu03ncq04o1" path="res://scenes/entities/goal.tscn" id="6_6civk"]
[ext_resource type="PackedScene" uid="uid://byp6x8e3ljl7g" path="res://scenes/ui/version.tscn" id="7_7af2g"]

[sub_resource type="LabelSettings" id="LabelSettings_0wfyh"]
font_size = 120
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.501961)
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w65of"]
bg_color = Color(0.376471, 0.376471, 0.376471, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yql1r"]
bg_color = Color(0.376471, 0.376471, 0.376471, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ia1n6"]
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0
bg_color = Color(0.376471, 0.376471, 0.376471, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hiwto"]
bg_color = Color(0.376471, 0.376471, 0.376471, 1)

[sub_resource type="Theme" id="Theme_yql1r"]
Button/font_sizes/font_size = 40
Button/styles/focus = SubResource("StyleBoxFlat_w65of")
Button/styles/hover = SubResource("StyleBoxFlat_yql1r")
Button/styles/normal = SubResource("StyleBoxFlat_ia1n6")
Button/styles/pressed = SubResource("StyleBoxFlat_hiwto")

[sub_resource type="LabelSettings" id="LabelSettings_yql1r"]
font_size = 28
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Title" type="Node2D"]
script = ExtResource("1_yql1r")

[node name="Background" parent="." instance=ExtResource("2_ia1n6")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAOr/AAADAAQAAAAAAOv/AAACAAUAAAAAAOz/AAACAAUAAAAAAO3/AAACAAUAAAAAAO7/AAACAAUAAAAAAO//AAACAAUAAAAAAPD/AAACAAUAAAAAAPH/AAACAAUAAAAAAPL/AAACAAUAAAAAAPP/AAACAAUAAAAAAPT/AAACAAUAAAAAAPX/AAACAAUAAAAAAPb/AAACAAUAAAAAAPf/AAACAAUAAAAAAPj/AAACAAUAAAAAAPn/AAACAAUAAAAAAPr/AAACAAUAAAAAAPv/AAACAAUAAAAAAPz/AAACAAUAAAAAAP3/AAACAAUAAAAAAP7/AAACAAUAAAAAAP//AAADAAUAAAABAP//AAABAAQAAAACAP//AAABAAQAAAADAP//AAABAAQAAAAEAP//AAABAAQAAAAFAP//AAABAAQAAAAGAP//AAABAAQAAAAHAP//AAABAAQAAAAIAP//AAABAAQAAAAJAP//AAABAAQAAAAKAP//AAABAAQAAAALAP//AAABAAQAAAAMAP//AAABAAQAAAANAP//AAABAAQAAAAOAP//AAABAAQAAAAPAP//AAABAAQAAAAQAP//AAABAAQAAAARAP//AAABAAQAAAASAP//AAABAAQAAAATAP//AAABAAQAAAAUAP//AAABAAQAAAAVAP//AAABAAQAAAAWAP//AAABAAQAAAAXAP//AAABAAQAAAAYAP//AAABAAQAAAAZAP//AAABAAQAAAAaAP//AAABAAQAAAAbAP//AAABAAQAAAAcAP//AAABAAQAAAAdAP//AAABAAQAAAAeAP//AAABAAQAAAAfAP//AAABAAQAAAAgAP//AAABAAQAAAAhAP//AAABAAQAAAAiAP//AAABAAQAAAAjAP//AAABAAQAAAAkAP//AAABAAQAAAAlAP//AAABAAQAAAAmAP//AAABAAQAAAAnAP//AAAEAAUAAAAnAOr/AAAEAAQAAAAnAOv/AAAAAAUAAAAnAOz/AAAAAAUAAAAnAO3/AAAAAAUAAAAnAO7/AAAAAAUAAAAnAO//AAAAAAUAAAAnAPD/AAAAAAUAAAAnAPH/AAAAAAUAAAAnAPL/AAAAAAUAAAAnAPP/AAAAAAUAAAAnAPT/AAAAAAUAAAAnAPX/AAAAAAUAAAAnAPb/AAAAAAUAAAAnAPf/AAAAAAUAAAAnAPj/AAAAAAUAAAAnAPn/AAAAAAUAAAAnAPr/AAAAAAUAAAAnAPv/AAAAAAUAAAAnAPz/AAAAAAUAAAAnAP3/AAAAAAUAAAAnAP7/AAAAAAUAAAABAOr/AAABAAYAAAACAOr/AAABAAYAAAADAOr/AAABAAYAAAAEAOr/AAABAAYAAAAFAOr/AAABAAYAAAAGAOr/AAABAAYAAAAHAOr/AAABAAYAAAAIAOr/AAABAAYAAAAJAOr/AAABAAYAAAAKAOr/AAABAAYAAAALAOr/AAABAAYAAAAMAOr/AAABAAYAAAANAOr/AAABAAYAAAAOAOr/AAABAAYAAAAPAOr/AAABAAYAAAAQAOr/AAABAAYAAAARAOr/AAABAAYAAAASAOr/AAABAAYAAAATAOr/AAABAAYAAAAUAOr/AAABAAYAAAAVAOr/AAABAAYAAAAWAOr/AAABAAYAAAAXAOr/AAABAAYAAAAYAOr/AAABAAYAAAAZAOr/AAABAAYAAAAaAOr/AAABAAYAAAAbAOr/AAABAAYAAAAcAOr/AAABAAYAAAAdAOr/AAABAAYAAAAeAOr/AAABAAYAAAAfAOr/AAABAAYAAAAgAOr/AAABAAYAAAAhAOr/AAABAAYAAAAiAOr/AAABAAYAAAAjAOr/AAABAAYAAAAkAOr/AAABAAYAAAAlAOr/AAABAAYAAAAmAOr/AAABAAYAAAAAAOn/AAABAAUAAAABAOn/AAABAAUAAAACAOn/AAABAAUAAAADAOn/AAABAAUAAAAEAOn/AAABAAUAAAAFAOn/AAABAAUAAAAGAOn/AAABAAUAAAAHAOn/AAABAAUAAAAIAOn/AAABAAUAAAAJAOn/AAABAAUAAAAKAOn/AAABAAUAAAALAOn/AAABAAUAAAAMAOn/AAABAAUAAAANAOn/AAABAAUAAAAOAOn/AAABAAUAAAAPAOn/AAABAAUAAAAQAOn/AAABAAUAAAARAOn/AAABAAUAAAASAOn/AAABAAUAAAATAOn/AAABAAUAAAAUAOn/AAABAAUAAAAVAOn/AAABAAUAAAAWAOn/AAABAAUAAAAXAOn/AAABAAUAAAAYAOn/AAABAAUAAAAZAOn/AAABAAUAAAAaAOn/AAABAAUAAAAbAOn/AAABAAUAAAAcAOn/AAABAAUAAAAdAOn/AAABAAUAAAAeAOn/AAABAAUAAAAfAOn/AAABAAUAAAAgAOn/AAABAAUAAAAhAOn/AAABAAUAAAAiAOn/AAABAAUAAAAjAOn/AAABAAUAAAAkAOn/AAABAAUAAAAlAOn/AAABAAUAAAAmAOn/AAABAAUAAAAnAOn/AAABAAUAAAABAPz/AAAGAAAAAAABAP3/AAAGAAEAAAABAP7/AAAGAAIAAAACAPz/AAAHAAAAAAACAP3/AAAHAAEAAAACAP7/AAAHAAIAAAADAPz/AAAHAAAAAAADAP3/AAAHAAEAAAADAP7/AAAHAAIAAAAEAPz/AAAHAAAAAAAEAP3/AAAHAAEAAAAEAP7/AAAHAAIAAAAFAPz/AAAHAAAAAAAFAP3/AAAHAAEAAAAFAP7/AAAHAAIAAAAGAPz/AAAHAAAAAAAGAP3/AAAHAAEAAAAGAP7/AAAHAAIAAAAHAPz/AAAHAAAAAAAHAP3/AAAHAAEAAAAHAP7/AAAHAAIAAAAIAPz/AAAHAAAAAAAIAP3/AAAHAAEAAAAIAP7/AAAHAAIAAAAJAPz/AAAHAAAAAAAJAP3/AAAHAAEAAAAJAP7/AAAHAAIAAAAKAPz/AAAHAAAAAAAKAP3/AAAHAAEAAAAKAP7/AAAHAAIAAAALAPz/AAAHAAAAAAALAP3/AAAHAAEAAAALAP7/AAAHAAIAAAAMAPz/AAAHAAAAAAAMAP3/AAAHAAEAAAAMAP7/AAAHAAIAAAANAPz/AAAHAAAAAAANAP3/AAAHAAEAAAANAP7/AAAHAAIAAAAOAPz/AAAHAAAAAAAOAP3/AAAHAAEAAAAOAP7/AAAHAAIAAAAPAPz/AAAHAAAAAAAPAP3/AAAHAAEAAAAPAP7/AAAHAAIAAAAQAPz/AAAHAAAAAAAQAP3/AAAHAAEAAAAQAP7/AAAHAAIAAAARAPz/AAAHAAAAAAARAP3/AAAHAAEAAAARAP7/AAAHAAIAAAASAPz/AAAHAAAAAAASAP3/AAAHAAEAAAASAP7/AAAHAAIAAAATAPz/AAAHAAAAAAATAP3/AAAHAAEAAAATAP7/AAAHAAIAAAAUAPz/AAAHAAAAAAAUAP3/AAAHAAEAAAAUAP7/AAAHAAIAAAAVAPz/AAAHAAAAAAAVAP3/AAAHAAEAAAAVAP7/AAAHAAIAAAAWAPz/AAAHAAAAAAAWAP3/AAAHAAEAAAAWAP7/AAAHAAIAAAAXAPz/AAAHAAAAAAAXAP3/AAAHAAEAAAAXAP7/AAAHAAIAAAAYAPz/AAAHAAAAAAAYAP3/AAAHAAEAAAAYAP7/AAAHAAIAAAAZAPz/AAAHAAAAAAAZAP3/AAAHAAEAAAAZAP7/AAAHAAIAAAAaAPz/AAAHAAAAAAAaAP3/AAAHAAEAAAAaAP7/AAAHAAIAAAAbAPz/AAAHAAAAAAAbAP3/AAAHAAEAAAAbAP7/AAAHAAIAAAAcAPz/AAAHAAAAAAAcAP3/AAAHAAEAAAAcAP7/AAAHAAIAAAAdAPz/AAAHAAAAAAAdAP3/AAAHAAEAAAAdAP7/AAAHAAIAAAAeAPz/AAAHAAAAAAAeAP3/AAAHAAEAAAAeAP7/AAAHAAIAAAAfAPz/AAAHAAAAAAAfAP3/AAAHAAEAAAAfAP7/AAAHAAIAAAAgAPz/AAAHAAAAAAAgAP3/AAAHAAEAAAAgAP7/AAAHAAIAAAAhAPz/AAAHAAAAAAAhAP3/AAAHAAEAAAAhAP7/AAAHAAIAAAAiAPz/AAAHAAAAAAAiAP3/AAAHAAEAAAAiAP7/AAAHAAIAAAAjAPz/AAAHAAAAAAAjAP3/AAAHAAEAAAAjAP7/AAAHAAIAAAAkAPz/AAAHAAAAAAAkAP3/AAAHAAEAAAAkAP7/AAAHAAIAAAAlAPz/AAAHAAAAAAAlAP3/AAAHAAEAAAAlAP7/AAAHAAIAAAAmAPz/AAAIAAAAAAAmAP3/AAAIAAEAAAAmAP7/AAAIAAIAAAA=")
tile_set = ExtResource("3_hiwto")

[node name="Camera" parent="." instance=ExtResource("4_w65of")]

[node name="Player" parent="." instance=ExtResource("5_ygloa")]
position = Vector2(134, -79)

[node name="Goal" parent="." instance=ExtResource("6_6civk")]
position = Vector2(482, -96)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Version" parent="CanvasLayer" instance=ExtResource("7_7af2g")]

[node name="MainMenu" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -192.0
offset_right = 304.0
offset_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="CanvasLayer/MainMenu"]
layout_mode = 2
text = "Platformer"
label_settings = SubResource("LabelSettings_0wfyh")

[node name="MenuOptions" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="StartButton" type="Button" parent="CanvasLayer/MainMenu/MenuOptions"]
layout_mode = 2
focus_next = NodePath("../QuitButton")
theme = SubResource("Theme_yql1r")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Start"

[node name="QuitButton" type="Button" parent="CanvasLayer/MainMenu/MenuOptions"]
layout_mode = 2
theme = SubResource("Theme_yql1r")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -140.0
offset_top = -72.0
offset_right = 140.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Â© 2025 Joshua Studio"
label_settings = SubResource("LabelSettings_yql1r")

[connection signal="pressed" from="CanvasLayer/MainMenu/MenuOptions/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MenuOptions/QuitButton" to="." method="_on_quit_button_pressed"]
